# recomented

./: Dockerfile  README.md  env-local-sample  pyproject.toml
data/: store.json
src/: srv.py
src/embeddings/: model.py  vectorstore.py
src/film/: film.py  store.py
src/logic/: logic.py  request_model.py
