[tool.poetry]
name = "recomented"
version = "0.1.0"
description = ""
authors = ["redyc123  <redyc123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langserve = "^0.2.2"
langchain = "^0.2.12"
chromadb = "^0.5.5"
langchain-community = "^0.2.11"
sse-starlette = "^2.1.3"
langchain-huggingface = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
